able to access /new route

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=local_library:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +13,19 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
-  }
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.16"
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daygoDao/mini_message_board.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/daygoDao/mini_message_board/issues"
+  },
+  "homepage": "https://github.com/daygoDao/mini_message_board#readme",
+  "description": ""
 }
